# learnopengl

./: CMakeLists.txt
include/: mesh.hpp  model.hpp  shader.h
include/glad/: glad.h
shaders/: lightshader.frag  lightshader.vert  modelshader.frag  modelshader.vert
src/: glad.c  main.cpp  mesh.cpp  model.cpp
